prevent Release block from overlapping Cello when shrinking window

--- a/index.css
+++ b/index.css
@@ -213,7 +213,7 @@ video-custom.Tuba {
   flex-flow: column nowrap;
   justify-content: flex-end;
   margin-left: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: -0.2rem;
 }
 
 .Release-items {
